--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -28,7 +28,7 @@ Marc Schoenauer\\
 \date{February 9, 2011}
 \maketitle
 \begin{abstract}
-\noindent Our method presented in this paper is a surrogate-model based combined learner and optimizer (LaO) for parameter tuning. In this paper LaO is used to tune the our Evolutionary Algorithm based Divide-and-Evolve (Dae) algorithm applied for AI Planning. The LaO framework makes it possible to learn the relation between the features of the instances and the optimal parameters, thus it makes it allows to generalize this relation to unknown instances in the domain or even in a new domain. Moreover, the learned model is already used as a surrogate-model in optimization to improve it. This way we aim to solve intra-domain and extra-domain tuning and generalization in one single framework. Our realization of LaO uses an Artificial Neural Network for learning the mapping and a Covariance Matrix Adaptation Evolution Strategy for optimization. We demonstrate that our algorithm is capable of improving the quality of the DaE algorithm considerably even with only a few iterations. The incorporation of the relation to the ANN model has its limits probably because the feature-set is not rich enough. However, the learned model perform with almost the same quality in the independent tests, which means that the learned model is capable of generalization at least in the domain. Multiple-domain tuning is currently solved by training models per domain, tuning of a general model has not been tried yet.
+\noindent Our novel method presented in this paper is a surrogate-model based, combined learner and optimizer (LaO) for parameter tuning. In this paper LaO is used to tune our Evolutionary Algorithm based Divide-and-Evolve (Dae) method applied for AI Planning. The LaO framework makes it possible to learn the relation between the features of the planning instances and the optimal parameters, thus it makes it possible to generalize this relation to unknown instances in the domain. Moreover, the learned intermediate model is iteratively used as a surrogate-model in optimization to improve it and vice versa. This way we aim to solve intra-domain and extra-domain tuning and generalization in one single framework. Our realization of LaO uses an Artificial Neural Network for learning the mapping and a Covariance Matrix Adaptation Evolution Strategy for optimization. We demonstrate that our algorithm is capable of improving the quality of the DaE algorithm considerably even with only a few iterations. The transfer of the relational information to the ANN model has its limits probably because the feature-set used is not yet rich enough. However, the learned model perform with almost the same quality in the independent tests, which means that the learned model is capable of generalization at least in the domain. Multiple-domain tuning is currently solved by training models per domain.
 
 \end{abstract}
 
@@ -39,15 +39,15 @@ Marc Schoenauer\\
 
 Parameter tuning is basically a general optimization problem applied off-line to find the best parameters for complex algorithms, for example for Evolutionary Algorithms (EAs). Whereas the efficiency of EAs has been demonstrated on several application domains (see for instance \cite{practice08} and \cite{ParameterSettingBook07}), they usually need computationally expensive parameter tuning. Consequently, one is tempted to use either the default parameters of the framework he is using, or parameter values given in the literature for problems that are similar to his one. 
 
-Being a general optimization problem, there might be as many parameter tuning algorithms as optimization techniques. Several methods have been proposed, for a good review of current state of the art see \cite{Montero:2010}. Though we have some experience both with Racing (\cite{bibai:2009}), REVAC (\cite{Nannen07}) and ParamILS (\cite{ParamILS-JAIR}), one faces always the same generalization issue: can a parameter-set that has been optimised for a given problem be successfully used to another one? The answer of course depends on the similarity of the two problems. However, even in an optimization domain as precisely defined as AI Planning, there are very few results describing meaningful similarity measures between optimization problems. Moreover, until now, sufficiently precise and accurate features have not been specified that would allow the user to describe the problem, so that the optimal parameter-set could be learned from this feature-set, and carried on to other problems with similar description. No design of a general learning framework is known to us and no general experiments has been carried out yet - at least to our knowledge - with some representative domains of AI planning.
+Being a general optimization problem, there might be as many parameter tuning algorithms as optimization techniques. Several methods have been proposed, for a good review of current state of the art see \cite{Montero:2010}. Though we have some experience both with Racing (\cite{bibai:2009}), REVAC (\cite{Nannen07}) and ParamILS (\cite{ParamILS-JAIR}), one faces always the same generalization issue: can a parameter-set that has been optimised for a given problem be successfully used to another one? The answer of course depends on the similarity of the two problems. However, even in an optimization domain as precisely defined as AI Planning, there are very few results describing meaningful similarity measures between optimization problems. Moreover, until now, sufficiently precise and accurate features have not been specified that would allow the user to describe the problem, so that the optimal parameter-set could be learned from this feature-set, and carried on to other problems with similar description. No design of a general learning framework with some representative domains of AI planning is known to us and no general experiments has been carried out yet, at least to our knowledge.
 
-The one exception we are aware of is the work \cite{Hutter06} in the SAT domain, in which many relevant features have been gathered based on half a century of SAT-research, and hundreds of papers. Extensive parameter tuning on several thousands of instances has allowed the authors to learn a meaningful mapping between the features and running-time, using function regression. Optimizing this model makes it possible to choose the optimal parameters. This paper aims to generalize this work made in the SAT domain, we, however aim not to optimize running time, but fitness value. This difference alone is however not causing major problems. We design the aforementioned framework for any domain, and start with some experimenting. The machine learning techniques used will also be different.
+The one exception we are aware of is the work \cite{Hutter06} in the SAT domain, in which many relevant features have been gathered based on half a century of SAT-research, and hundreds of papers. Extensive parameter tuning on several thousands of instances has allowed the authors to learn a meaningful mapping between the features and running-time, using function regression. Optimizing this model makes it possible to choose the optimal parameters. This paper aims to generalize this work made in the SAT domain; we, however aim not to optimize running time, but fitness value. This difference alone is however not causing major problems. We design the aforementioned framework for any domain, and start with some experimenting. The machine learning techniques used will also be different.
 
-An AI planning task written in PDDL is specified by a domain, that defines the predicates and the actions, and an instance, that instantiates the objects, and specifies the initial state and a list of goals to reach. A solution is a plan, or a sequence of actions, such that when applied to the initial state it leads the system into a state where all goal atoms are true. Hence, for a given domain, there can exist several instances sharing the same predicates and actions, but differing either by the number of objects, or the initial and goal states. 
+An AI planning task written in PDDL is specified by a domain, that defines the predicates and the actions; an instance, that instantiates the objects, and specifies the initial state and a list of goals to reach. A solution is a plan, or a sequence of actions, such that when applied to the initial state it leads the system into a state where all goal atoms are true. Hence, for a given domain, there can exist several instances sharing the same predicates and actions, but differing either by the number of objects, or the initial and goal states. 
 
 Unfortunately, until now, there has not existed any set of features for AI Planning problems in general that was sufficient to describe the characteristics of a planning task, like for the SAT domain \cite{Hutter06} mentioned above. In this paper however, we make an important step to the framework for parameter tuning applied generally for each domain in AI Planning with a preliminary set of features. Our Learn-and-Optimize (LaO) framework consists of the combination of optimizing (i.e. parameter tuning) and of learning the mapping between features and best parameters. We benefit from learning already in the optimization phase using the learned model similarly as in other surrogate-model based optimization techniques (see for example \cite{Bardenet} for a Gaussian-process-based approach).
 
-LaO can of course be applied to any target algorithm to be tuned, but in this paper we are considering our special, Evolutionary Algorithm (EA) based method, called Divide-and-Evolve (DaE), which is an EA applied to solve AI problems. We take DaE as it is, as a black-box algorithm and have not modified it in this paper. The same realization described in \cite{BibEvoCop:2010} is used. 
+LaO can of course be applied to any target algorithm to be tuned, for example to tune Support Vector Machines applied for different porblem-instances. In this paper we are considering as a target our special, Evolutionary Algorithm (EA) based method, called Divide-and-Evolve (DaE), which is an EA applied to solve AI problems. We take DaE as it is, as a black-box algorithm and have not modified it in this paper. The same realization described in \cite{BibEvoCop:2010} is used. 
 
 The paper is organized as follows: AI Planning Problems and the basic YASHP Solver is briefly introduced in section \ref{section:planning}. Section \ref{section:dae} describes our intermediate, Divide-and-Evolve Method. Section \ref{section:LaO} describes our new, top level method: Learn-and-Optimize used for parameter tuning. Our resuts are presented in section \ref{section:results} and conclusions are drawn in section \ref{section:conclusions}. We end the paper in section \ref{section:futurework} with future work foreseeable.
 
@@ -104,15 +104,17 @@ Note that the initialization process and these variation operators maintain the 
 
 \subsection{The General LaO Framework}
 
-As already mentioned, parameter tuning is actually a general global optimization problem, thus the main issue of local optimality consists also a problem here. But a further problem arises in parameter tuning, and this is the generality of the tuned parameters. Tuning for one instance has some meaning if only that instance is to be solved. On the other hand, parameters tuned for one instance may not be optimal for other instances, as \cite{BibGECCO:2010} demonstrates it. This very same paper also demonstrates that global tuning for several domains is even more inferior.
+As already mentioned, parameter tuning is actually a general global optimization problem, thus the main issue of local optimality consists also a problem here. But a further problem arises in parameter tuning, and this is the generality of the tuned parameters. Tuning only one instance has of course a sense if only that instance is to be solved. Parameters tuned for one instance however, may not be optimal for other instances, as \cite{BibGECCO:2010} demonstrates it. This very same paper also demonstrates that global tuning for several domains is even more inferior.
 
-If the parameters are generalized for another instance in the same domain (intra-domain generalization), the problem is that there are instances with very different complexity in the same domain. For example in \cite{BibGECCO:2010} per domain tuning was performed with the most difficult, last instance. One can see from the results that these parameters were often suboptimal for the other instances. Probably the same issue arises if one wants to carry out parameter tuning for the whole domain, i.e. by testing with a representative set of instances of that domain. Since the optimum values of the parameters might change from instance to instance, only a "dull" average-like parameter-setting may be computed.
+If the parameters are generalized for another instance in the same domain (intra-domain generalization), the problem is that there are instances with very different complexity in the same domain. For example in \cite{BibGECCO:2010} per-domain tuning was performed with the most difficult, last instance as a representative of the domain. One can see from the results that these parameters were often suboptimal for the other instances. Probably the same issue arises if one takes several instances as the representative of the domain. Since the optimum values of the parameters might change from instance to instance, only a "dull" average-like parameter-setting may be computed. Moreover, computing time needed increases linearly with the number of training instances. 
 
-Inter-domain generalization means that the parameter-setting is generalized for an instance in a different domain (extra-domain generalization). The same problems may arise as in intra-domain generalization, but furthermore, also differences between the domains may cause a problem: Even an instance of similar complexity may require different settings in another domain. The inferior results in \cite{BibGECCO:2010} with global tuning indicate that these are real problems.
+Inter-domain generalization means that the parameter-setting is generalized for an instance in a different domain (extra-domain generalization). The same problems may arise as in intra-domain generalization, but furthermore, also differences between the domains may cause a problem: Even an instance of similar complexity may require different settings in another domain. The inferior results with global tuning in \cite{BibGECCO:2010} indicate that these are real problems.
 
-Our Learn-and-Optimize framework (LaO) aims to solve both the intra-domain and extra-domain generalization problems, by adding learning to optimization. We may assume that there might be a relation between some features of the instance and the optimal parameters. If we could learn such a relation representable by a mapping, we could account both for intra- and extra-domain variability of the optimal parameters. The features could describe differences both between instances from the same domain, both differences between domains. To do this, we try to extract features both from the domain-file and the instance-file.
+The main obstacle here is in the concept of finding a single optimal parameter-set, instead of finding a more complex relation. After deciding to learn something more complex, the next question arises: "How to learn it?". Our Learn-and-Optimize framework (LaO) aims to answer this question and to solve both the intra-domain and extra-domain generalization problems, by adding learning to optimization. We may assume that there might be a relation between some features of the instance and the optimal parameters. If we could learn such a relation representable by a mapping, we could account both for intra- and extra-domain variability of the optimal parameters. The features could describe differences both between instances from the same domain, both differences between domains. To do this, we try to extract features both from the domain-file and the instance-file.
 
-Suppose we have n features and m parameters. For the sake of simplicity and generality, both the fitness value, the features and the parameters are considered as real values. Parameter tuning is the optimization (minimization) of the fitness function \begin{math}f:\mathbf{R}^m\to \mathbf{R} \end{math}, which function is different for each instance. In our case f is the expected value off the stochastic algorithm DaE executed with parameter \begin{math} p \in \mathbf{R}^m \end{math}. The optimal parameter is defined by \begin{math} p_{opt}=argmin_p\{f(p)\} \end{math}. For each instance there is a set \begin{math} F \in \mathbf{R}^n \end{math}, the features of that instance and the corresponding domain. There is a possibility that different instances have the same features, which may occur if the feature-set is not rich enough. If for two instances the features are the same, we there is a chance that there is no big difference in the optimal parameter. Or to be more precise, there is no big difference in fitness when using one or the other optimal parameter, or maybe something "in-between". We do not know how serious problem this unambiguity could consist. We hope that a learning algorithm would tolerate this and "cut through" the unambiguity. For the sake of simplicity we consider as if there existed an unambiguous mapping from the feature space to the optimal parameter space. 
+Suppose we have n features and m parameters. For the sake of simplicity and generality, both the fitness value, the features and the parameters are considered as real values. Parameter tuning is the optimization (in our case minimization) of the fitness function \begin{math}f:\mathbf{R}^m\to \mathbf{R} \end{math}, which function is different for each instance. In our case f is the expected value off the stochastic algorithm DaE executed with parameter \begin{math} p \in \mathbf{R}^m \end{math}. The optimal parameter is defined by \begin{math} p_{opt}=argmin_p\{f(p)\} \end{math}. For each instance there is a set \begin{math} F \in \mathbf{R}^n \end{math}, the features of that instance and the corresponding domain. 
+
+Here we have to relations: each planning instance has features and it has an optimal parameter-set. In order to be able to generalize, we have to get rid of the instance and collapse the two relations into one relation between feature-space and parameter-space. But can we combine these relations into one?There is a possibility that different instances have the same features, which may occur if the feature-set is not rich enough. If for two instances the features are the same, there is a chance that there is no big difference in the optimal parameter. Or to be more precise, there is no big difference in fitness when using one or the other optimal parameter, or maybe something "in-between". We do not know how serious problem this unambiguity could consist. We hope that a learning algorithm would tolerate this and "cut through" the unambiguity. For the sake of simplicity we consider as if there existed an unambiguous mapping from the feature space to the optimal parameter space. 
 
 \begin{equation} p_F: \mathbf{R}^n \to \mathbf{R}^m, p_F(F)=p_{opt} \end{equation}.	
 
@@ -132,7 +134,7 @@ Our choice for supervised learning method was a multilayer Feed-Forward Artifici
 
 The only open decision is which optimizer to use for parameter tuning. Since we have several instances to run, we can only afford a simple optimizer, therefore simply a Covariance Matrix Adaptation Evolution Strategy was chosen, specifically, a (1+1)-CMA-ES (in short, CMA-ES, see \cite{hansen2001ecj}). We started CMA-ES with a known set of good default parameters, taken from \cite{BibGECCO:2010}.
 
-There is one element added to a conventional CMA-ES, and this is gene-transfer between instances. We have one CMA-ES running for each instance, because we can not afford to use a larger population for a single instance. However, the CMA-ES instances of all the instances form a set of individuals. Crossover between individuals is usually not used in ES, however, in our case the the set of individuals does not resemble to a population, but to a set of species. We have to assume that the optimum for the instances are different: they are in different "niche"-s of the parameter tuning "biosphere". However, we also may assume that a good chromosome of one instance may at least help another instance. Thus it may be used as a hint in the optimization. Therefore random gene-tranferer was used in our algorithm. When the Genetransferer is requested for a hint for one instance, it returns with uniform random distribution the so-far best parameter of a different instance. Naturally, the default parameters are not tried twice. There is another benefit from gene-transfer, it may smooth out the unambiguities between instances: we increase the probability for instances with the same features to test the same parameters, and thus the possibility to find out that the same parameters are appropriate for the same features.
+There is one element added to a conventional CMA-ES, and this is gene-transfer between instances. We have one (1+1)-CMA-ES running for each instance, because we can not afford to use a larger population for a single instance. However, the (1+1)-CMA-ES instances of all the instances form a set of individuals. Crossover between individuals is usually not used in ES, however, in our case the the set of individuals does not resemble to a population, but to a set of species. We have to assume that the optimum for the instances are different: they are in different "niche"-s of the parameter tuning "biosphere". However, we also may assume that a good chromosome of one instance may at least help another instance. Thus it may be used as a hint in the optimization. Therefore random gene-tranferer was used in our algorithm. When the Genetransferer is requested for a hint for one instance, it returns with uniform random distribution the so-far best parameter of a different instance. Naturally, the default parameters are not tried twice. There is another benefit from gene-transfer, it may smooth out the unambiguities between instances: we increase the probability for instances with the same features to test the same parameters, and thus the possibility to find out that the same parameters are appropriate for the same features.
 
 Using the ANN and the Genetransferer as external hints in addition to the CMA-ES corrupts somewhat the later one. The CMA-ES shall be informed about these external hints, if they improve the fitness-function. These external hints are handled as if they were the hint of the CMA-ES algorithm, i.e. we request a hint from the CMA-ES and change it to be the value of the external hint as if by chance that was the hint of CMA-ES. This way corruption is minimized. The global step size is updated with true or false, depending on the improvement or lack of improvement, covariance matrix is updated only in the later case.
 
@@ -140,7 +142,7 @@ There is one additional technical problem with CMA-ES, this is that each paramet
 
 Our realization of our LaO algorithm uses the Shark library (\cite{shark08}) for CMA-ES and the FANN library for ANN (\cite{nissen}). To evaluate each parameter-setting with each instance, we use a computer-cluster of LRI with approximately 60 computers, most of them have 4 cores, but some have 8. The cluster is used by many researchers, therefore our algorithm contains a scheduler to use the free capacity on this cluster.
 
-Since the parallel architecture used in our algorithm is somewhat heterogeneous, we can not rely on a fixed running time, which depends on the hardware. Therefore, for each evaluation the number of evaluations is fixed for DaE. Note that the number of evaluations is approximately proportional with running time, so that the execution time for a particular computer is also determined independently of the parameter-settings. For example, even if the size of the population is increased, with fixed number of evaluation the number of generations will be limited respectively resulting approximatively in the same running time for each parameter-settings. 
+Since the parallel architecture used in our algorithm is somewhat heterogeneous, we can not rely on a fixed running time, which depends on the hardware. Therefore, for each evaluation the number of evaluations is fixed for DaE. Note that the number of YASHP evaluations is approximately proportional with running time, so that the execution time for a particular computer is also determined independently of the parameter-settings. For example, even if the size of the population is increased, with fixed number of evaluation the number of generations will be limited respectively resulting approximatively in the same running time for each parameter-settings. 
 
 Moreover, since DaE is not deterministic, we carried out 11 runs and took the median fitness-value as the result for that instance and that parameter-settings.
 
@@ -205,22 +207,22 @@ Number of offsprings& 100& 2000& 700 \\
 \section{Results}
 \label{section:results}
 
-In the Planning and Learning Part of IPC2011 (IPC), there were 5 sample domains pre-published, with a corresponding problem-generator for each domain. The 5 domains are Ferry, Freecell, Grid, Mprime, and Sokoban. We excluded Ferry from this paper, since there were not enough number of instances to learn a mapping. For the remaining 4 domains we generated approximately 100 instances for each domain, since this seemed to be appropriate for a running time of 2-3 weeks. The description of the track fixes running time as 15 minutes. Since we use number of evaluations as a terminating criterion 11 runs were carried out for each instance on our own, dedicated server to measure the median of number of evaluations with our default parameters. The median of 11 runs were taken and used as a termination criterion for each instance in the train set on any computer. For many instances we did not have any result in 15 minutes, those we had to drop. The remaining instances were used for training. 
+In the Planning and Learning Part of IPC2011 (IPC), there were 5 sample domains pre-published, with a corresponding problem-generator for each domain. The 5 domains are Ferry, Freecell, Grid, Mprime, and Sokoban. We excluded Ferry from this paper, since there were not enough number of instances to learn a mapping. For the remaining 4 domains we generated approximately 100 instances for each one, since this seemed to be appropriate for a running time of 2-3 weeks. The description of the track fixes running time as 15 minutes. Since we use number of YASHP evaluations as a terminating criterion 11 runs were carried out for each instance on our own, dedicated server to measure the median of number of evaluations with our default parameters. The median of 11 runs were taken and used as a termination criterion for each instance in the train set on any computer. For many instances we did not have any result in 15 minutes, those we had to drop. The remaining instances were used for training. 
 
 
 Table \ref{table:domains} shows the data for each domain, as you can see from the approximately 100 instances from each domain we could use all of the training instances (108) only in the domain Freecell. In the other domains we got much less usable instances. The Mean Square Error (MSE) of the retrained ANN is shown for each domain. Note that since there can be multiple optimal parameters for the same instance (fitness-function is discrete), there might be an unavoidable error of the ANN.
 
-5 iterations of CMA-ES were carried out, followed by one ANN and one Genetransferer, and this cycle was iterated in the algorithm. This means that for example for the Grid domain that LaO was running for 10 iterations and CMA-ES was called 50 times in total. One has to note that this is not much, but we were restricted by time.
+5 iterations of CMA-ES were carried out, followed by one ANN and one Genetransferer, and this cycle was iterated in the algorithm. This means that for example for the Grid domain LaO was running for 10 iterations and CMA-ES was called 50 times in total. One has to note that this is not much, but we were restricted by time.
 
-The ANN had 3 fully connected layers, and the hidden layer had the same number of neurons as the input. Learning was done by the conventional back-propagation algorithm, which is the default in FANN. In one iterations of LaO the ANN was only trained once for 50 iterations (called epochs in FANN) without reseting the weights, so that we avoid over-training. The aim of not reseting the weights was that the ANN makes a graded transition from the previous best known parameter-set to the new best known parameter-set, which could help optimization by trying some intermediate values. Over the 10 iterations of LaO in the domain Grid this means that 500 iterations (epochs) of the ANN were carried out in total. However, note that the best parameters were trained with much less iterations, depending on the time when they were found. In the worst case, if the best parameter was found in the last iteration of LaO, it was trained for only 50 and not used anymore, only recorded in the logs. 
+The ANN had 3 fully connected layers, and the hidden layer had the same number of neurons as the input. Learning was done by the conventional back-propagation algorithm, which is the default in FANN. In one iterations of LaO the ANN was only trained once for 50 iterations (called epochs in FANN) without reseting the weights, so that we avoid over-training. The aim of not reseting the weights was that the ANN makes a graded transition from the previous best known parameter-set to the new best known parameter-set, which could help optimization by trying some intermediate values. This means that over the 10 iterations of LaO in the domain Grid 500 iterations (epochs) of the ANN were carried out in total. However, note that the best parameters were trained with much less iterations, depending on the time when they were found. In the worst case, if the best parameter was found in the last iteration of LaO, it was trained for only 50 epochs and not used anymore, only recorded in the logs. This is why retraining is needed in the end.
 
-A parameter in LaO may come from different sources, namely it can be the default parameter, or requested from the CMA-ES, the Genetransferer or the ANN. It is an important information to know how good these sources work in optimization. Table \ref{table:hints} serves this purpose: it shows how each source contributes to the best parameter-settings in the end. For each source the first number shows the ratio the source contributed to the best result if tie-breaks are taken into account, the second number shows the same, if only the first best parameter-set is taken into account. Note that the order of the sources is as it is in the table: for example if CMA-ES found a different parameter-settings with the same makespan as the default, that is not included in the first ratio, but it is included in the second. Analyzing both numbers can lead to interesting conclusions. For example, for domain Mprime the default parameter-settings was the optimal for 45\% of the instances, however, only in 2\% of the instances there was no other parameter-setting found with the same quality. Note that CMA-ES was giving the first hint in each iteration and had 5 times more possibilities than the ANN. Taking this into account both the ANN and Genetransferer made an important contribution to optimization.
+A parameter-set in LaO may come from different sources, namely it can be the default parameter-set, or requested from the CMA-ES, the Genetransferer or the ANN. It is an important information to know how good these sources work in optimization. Table \ref{table:hints} serves this purpose: it shows how each source contributes to the best parameter-settings in the end. For each source the first number shows the ratio the source contributed to the best result if tie-breaks are taken into account, the second number shows the same, if only the first best parameter-set is taken into account. Note that the order of the sources is as it is in the table: for example if CMA-ES found a different parameter-settings with the same makespan as the default, that is not included in the first ratio, but it is included in the second. Analyzing both numbers can lead to interesting conclusions. For example, for domain Mprime the default parameter-settings was the optimal for 45\% of the instances, however, only in 2\% of the instances there was no other parameter-setting found with the same quality. Note that CMA-ES was giving the first hint in each iteration and had 5 times more possibilities than the ANN. Taking this into account both the ANN and Genetransferer made an important contribution to optimization.
 
 Termination criterion in the competition was simply the available time, the algorithm was running for several weeks on our cluster, which is used also for other research, i.e. only a small number of 4 or 8-core processors were available for each domain in average. After stopping LaO, retraining was made with 300 ANN epochs with the best data, because the ANN's saved directly from LaO may be under-trained. The MSE error of the ANN did not decrease using more epochs, which indicates that 300 iterations are enough at least for this amount of data and for this size of the ANN. Tests with 1000 iterations did not produce better results and neither training the ANN uniquely with the first found best parameters.
 
 The controlled parameters of DAEx are described in table \ref{table:parameters}. For a detailed description of these parameters, see \cite{BibGECCO:2010}. The feature-set consists of 12 features. First there are 5 important features: the number of fluents, goals, predicates, objects and types. These were extracted from the domain file or the instance file using the PDDL parser. One further feature we think could even be more important is called mutex-density, which is the number of mutexes divided by the number of all fluent-pairs. We also kept 6 less important features: number of lines, words and byte-count - obtained by the linux command "wc" - of the instance and the domain file. These features were kept only for historical reasons: they were used in the beginning as some "dummy" features.
 
-Since testing was also carried out on the cluster, the termination criterion for testing was also the number of evaluations fixed for each instance. For evaluation the quality-improvement (quality-ratio) metric as used as in IPC competitions. As a baseline we took the default parameter-setting. The ratio of the fitness value for the default parameter and the tuned parameter was computed and average was taken over the instances in the train or test-set. Note that since our termination criterion is number of evaluations, there was no unsolved instance. If an instance was unsolvable, it was dropped, if it was solvable, it is also solvable with any parameter-setting, moreover the running time does not depend on the computer. 
+Since testing was also carried out on the cluster, the termination criterion for testing was also the number of evaluations fixed for each instance. For evaluation the quality-improvement (quality-ratio) metric as used in IPC competitions. As a baseline we took the default parameter-setting. The ratio of the fitness value for the default parameter and the tuned parameter was computed and average was taken over the instances in the train or test-set. Note that since our termination criterion is number of evaluations, there was no unsolved instance. If an instance was unsolvable with default parameters within the specified time, it was dropped, if it was solvable, it is also solvable with any parameter-setting, moreover the running time does not depend on the computer. 
 
 Table \ref{table:domains} shows our results. We present several quality-improvement ratios. "In LaO" means that the best found parameter is compared to the default. By definition this ratio can not be less than 1 for any instance. We also present quality-improvement ratios for the retrained ANN on the training-set and the test-set. In these later cases, numbers less then 1 are possible, but were rare. As it can be seen we achieved a considerable quality-gain in training, but the transfer of this improvement to the ANN-model was only partial. Reasons for this may be different. First, there is the unambiguity of the mapping, second, the ANN may not be complex enough for the mapping, but most probably the feature-set is not powerful enough. 
 
